Full Screen Icon Bug Fix
:Release Notes:
Full Screen Icon Bug Fix

:Detailed Notes:
Fixed bug- Icon to minimize the screen while in full screen mode is not visible.

:Testing Performed:
Tested with verification Build

:QA Notes:
NA

:Issues Addressed:
[WRO-12215] Exit Full Screen button is not visible

--- a/samples/enact-based/src/components/ExitFullScreenButton/ExitFullScreenButton.module.less
+++ b/samples/enact-based/src/components/ExitFullScreenButton/ExitFullScreenButton.module.less
@@ -9,7 +9,7 @@
 
 	.applySkins({
 		.bg {
-			background-color: #4c5360;
+			background-color: #4c5360 !important;
 		}
 		.icon {
 			top: 6px;
